# pleiades-example

./: README.md  hello.py  pyproject.toml
examples/: pyproject.toml  raw_requester.py  raw_worker.py
