[project]
name = "pleiades-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymec",
]

[tool.uv.workspace]
members = ["examples"]

[tool.uv.sources]
pymec = { git = "https://github.com/CREST-applications/pymec.git" }
